...
        controller: _scrollController,
        headerSliverBuilder: (context, innerBoxIsScrolled) {
          return [
            SliverAppBar(
              floating: true,
              snap: true,
              title: const Text('Group Management'),
              centerTitle: true,
              actions: [
                IconButton(
                  icon: const Icon(Icons.palette_outlined),
                  tooltip: 'Change Theme Color',
                  onPressed: () {
...
